--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,10 +5,10 @@
 <main class="flex justify-center items-center mt-40 max-w-[1280px] w-auto mx-auto h-auto sm:mb-28 px-8 rounded-3xl sm:bg-[url('/assets/backgrounds/blob-scene-haikei-hero.svg')] dark:sm:bg-[url('/assets/backgrounds/blob-scene-haikei-heo-dark.svg')] bg-cover bg-center bg-no-repeat py-10" id="hero">
 	<div class="grid mx-4 md:grid-cols-2 gap8 sm:my-12">
 		<div class="grid justify-center w-full h-auto items-center">
-			<img src="/assets/114986813_p0.jpg" class="w-96  rounded-full ring-4 ring-gray-300 dark:ring-gray-500" alt="Profile @jljulioa">
+			<img src="/assets/wallhaven-m3vg68.jpg" class="w-96  rounded-full ring-4 ring-gray-300 dark:ring-gray-500" alt="Profile @jljulioa">
 		</div>
 		<div class="flex flex-col justify-center items-center">
-			<h1 class="animate-fade-up animate-infinite animate-duration-[2000ms] animate-delay-100 animate-ease-outpy-8 text-8xl text-center font-bold w-full bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 ">
+			<h1 class="text-8xl text-center font-bold w-full bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 ">
 				@Jaime Julio
 			</h1>
 			<p class="text-3xl pt-8 md:px-8 text-center text-white dark:text-gray-700 font-semibold">AWS DevOps Jr. and Mechanical Engineer with MBA (Project Admin)</p>
