--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -85,7 +85,7 @@ const iconLinks: { label: string; href: string; icon: any }[] = [
         target="_blank"
       >
         <button
-          data-tooltip-target="tooltip-animation-send"
+          data-tooltip-target="tooltip-animation-cv"
           type="button"
           class="text-white text-lg md:text-2xl bg-blue-700 hover:bg-[#665fcc] dark:bg-[#665fcc] dark:hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full px-5 py-2.5 text-center"
         >
@@ -93,7 +93,7 @@ const iconLinks: { label: string; href: string; icon: any }[] = [
         </button>
       </a>
       <div
-        id="tooltip-animation-send"
+        id="tooltip-animation-cv"
         role="tooltip"
         class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700"
       >
