--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -98,7 +98,7 @@ import Title from '../layouts/Titles.astro'
       </li>
     </ol>
   </div>
-  <Title>Self Education</Title>
+  <Title class="pt-20">Self Education</Title>
   <p class="pb-8 pt-20 text-xl md:text-2xl text-center">
    In this sections I show what key materials I am used to lern so far, not certificated model education.
   </p>
