--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -4,17 +4,20 @@ import Section from "../layouts/Section.astro";
 import AppSlides from "./AppSlides";
 ---
 
-<Section>
+<Section class="pt-20">
   <Title>AI Wallpapers</Title>
   <p class="pb-8 pt-20 text-xl md:text-2xl text-center">
-    This is Another project about a Gallery App of Wallpapers created by AI
-    using <a
+    This is Another project about a Gallery App of Wallpapers created by @me using AI Web like
+     <a
       href="https://www.catbird.ai/"
       class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold">CatBird.ai</a
     > and <a
       href="https://tensor.art/"
       class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold">TensorArt</a
-    >. This App was created using as a Backend AWS Services:
+    >. Some other Wallpapers where taken from <a
+    href="https://wallhaven.cc/"
+    class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold">Wallhaven</a
+  >. This App was created using as a Backend AWS Services:
   </p>
   <div class="flex justify-center">
     <ul class="list-disc text-xl md:text-2xl">
