--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -3,13 +3,27 @@ import Section from "../layouts/Section.astro";
 import Title from "../layouts/Titles.astro";
 ---
 
-<Section id="about">
-  <div class="grid justify-center items-center pt-20">
+<Section id="about" class="grid justify-center items-center pt-20">
     <Title>About @me</Title>
-    <p class="pb-8 pt-20 text-xl md:text-2xl">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut repellendus
-      consequatur eius quod quisquam, qui eligendi maxime numquam earum totam ea
-      nostrum autem, itaque eos facilis quasi aperiam repellat. Dolorem?
+    <p class="pb-8 pt-20 text-xl md:text-2xl text-center text-wrap">
+      Ever since childhood, I harbored an insatiable passion and curiosity for
+      unraveling the intricacies of the World Wide Web. This fervor ignited the
+      moment I laid my hands on my first computer, and it only intensified with
+      each new discovery. Despite veering onto a different path at one point,
+      the flame of passion continued to burn within me. Now, I am compelled to
+      retrace my steps and follow those initial feelings that sparked my
+      fascination with the digital realm.
     </p>
   </div>
+  <!-- <Title class="pb-8">Music I like</Title>
+  <div class="rounded-xl ring-2 ring-white">
+    <iframe
+    style="border-radius:12px"
+    src="https://open.spotify.com/embed/playlist/3y5DnmUjTZR0fuOM8zJ733?utm_source=generator&theme=0"
+    width="100%"
+    height="352"
+    allowfullscreen=""
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+    loading="lazy"></iframe>
+  </div> -->
 </Section>
