--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,7 @@
 // Component Imports
 import MainHead from "../components/MainHead.astro";
 import FooterV2 from "../components/Footer.astro";
+import Nav from "../components/Nav.astro";
 // Supports weights 100-900
 import "@fontsource-variable/onest";
 
@@ -21,9 +22,10 @@ const { title, description } = Astro.props;
     <MainHead title={title} description={description} />
   </head>
   <body
-    class="flex justify-center items-center w-auto mx-auto bg-[url('/assets/backgrounds/layered-waves-haikei.svg')] dark:bg-[url('/assets/backgrounds/layered-waves-haikei-light.svg')] bg-cover bg-center bg-no-repeat bg-[#001220] text-neutral-400 dark:text-slate-900 dark:bg-indigo-100"
+    class="relative h-screen bg-[#001220] text-neutral-400 dark:text-slate-900 dark:bg-indigo-100"
   >
-    <div class="w-full mx-auto">
+    <div class="relative w-full h-full">
+      <Nav />
       <slot />
       <FooterV2 />
     </div>
