--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,15 +1,13 @@
 ---
-import Frame from './icons/Frame.astro';
-import Profile from './icons/Profile.astro';
-import FrameCircle from './icons/Frame-circle.astro';
+
 ---
 
-<main class="grid sm:grid-cols-3 mt-40 max-w-7xl w-full mx-auto sm:mb-28 px-2 sm:rounded-3xl text-white dark:text-[#665fcc] sm:bg-[url('/assets/backgrounds/blob-scene-haikei-hero.svg')] dark:sm:bg-[url('/assets/backgrounds/blob-scene-haikei-heo-dark.svg')] bg-cover bg-center bg-no-repeat py-10" id="hero">
-	<h1 class="grid sm:items-end text-center text-2xl sm:text-xl md:text-2xl font-semibold">AWS DevOps Jr. and Mechanical Engineer with MBA (Project Admin)</h1>
+<main class="grid sm:grid-cols-3 relative mt-20 sm:mt-40 max-w-7xl w-full mx-auto sm:mb-28 px-2 sm:rounded-3xl text-white dark:text-slate-900 sm:bg-[url('/assets/backgrounds/blob-scene-haikei-hero.svg')] dark:sm:bg-[url('/assets/backgrounds/blob-scene-haikei-heo-dark.svg')] bg-cover bg-center bg-no-repeat" id="hero">
+	<h1 class="grid p-4 sm:items-end text-center text-2xl sm:text-xl md:text-2xl font-semibold">AWS DevOps Jr. and Mechanical Engineer with MBA (Project Admin)</h1>
 	<div class="-order-1 sm:order-1 grid items-center justify-center">
-		<img src="/assets/jljulioa-2.png" class="hero-image max-w-96 sm:bg-white bg-[url('/assets/backgrounds/bg-profile-1.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')]  dark:sm:bg-[#665fcc] bg-cover bg-center bg-no-repeat" alt="jljulioa">
+		<img src="https://onedrive.live.com/embed?resid=A72586530CE9245A%21222&authkey=%21AM5zbrGSSvU0a1w&width=3195&height=3035" class="hero-image max-w-[600px] sm:w-auto w-full md:bg-white bg-[url('/assets/backgrounds/bg-profile-1.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')]  dark:sm:bg-[#665fcc] bg-cover bg-center bg-no-repeat" alt="jljulioa">
 	</div>
-	<h1 class="grid sm:justify-end text-center pb-4 text-3xl sm:text-4xl md:text-5xl font-bold -order-1 sm:order-1">@Jaime Julio A.</h1>
+	<h1 class="grid p-4 sm:justify-end text-center text-3xl sm:text-4xl md:text-5xl font-bold -order-1 sm:order-1">@Jaime Julio A.</h1>
 </main>
 <img src="/assets/backgrounds/bg-div-up.svg" class="w-full sm:hidden dark:hidden pb-20" alt="">
 <img src="/assets/backgrounds/bg-div-up-dark.svg" class="w-full hidden dark:block dark:sm:hidden pb-20" alt="">
