--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -12,10 +12,10 @@ import Title from "../layouts/Titles.astro";
       nostrum autem, itaque eos facilis quasi aperiam repellat. Dolorem?
     </p>
     <div
-      class="px-8 grid grid-cols-1 justify-items-center sm:grid-cols-2 gap-10"
+      class="grid grid-cols-1 justify-items-center sm:grid-cols-2 gap-10"
     >
       <div
-        class="max-w-sm px-0 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
       >
         <a href="#" class="max-w-screen py-2">
           <img class="rounded-t-lg" src="/assets/P1.png" alt="" />
@@ -30,7 +30,7 @@ import Title from "../layouts/Titles.astro";
           </a>
           <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
             Backend service for Wallpapers Management using Lambda API Gateway
-            and serverless as a Framework
+            and Serverless Framework. CI/CD GithHub Actions
           </p>
           <a
             href="#"
@@ -55,7 +55,7 @@ import Title from "../layouts/Titles.astro";
         </div>
       </div>
       <div
-        class="max-w-sm px-0 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
       >
         <a href="#" class="max-w-screen py-2">
           <img class="rounded-t-lg" src="/assets/P2.png" alt="" />
