--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,10 +2,10 @@
 
 ---
 
-<main class="grid sm:grid-cols-3 relative mt-20 sm:mt-40 max-w-7xl w-full mx-auto sm:mb-28 px-2 sm:rounded-3xl text-white dark:text-slate-900 sm:bg-[url('/assets/backgrounds/blob-scene-haikei-hero.svg')] dark:sm:bg-[url('/assets/backgrounds/blob-scene-haikei-heo-dark.svg')] bg-cover bg-center bg-no-repeat" id="hero">
+<main class="grid sm:grid-cols-3 relative mt-20 sm:mt-40 max-w-7xl w-full mx-auto sm:mb-28 px-2 sm:rounded-3xl text-white dark:text-slate-900 " id="hero">
 	<h1 class="grid p-4 sm:items-end text-center text-2xl sm:text-xl md:text-2xl font-semibold">AWS DevOps Jr. and Mechanical Engineer with MBA (Project Admin)</h1>
 	<div class="-order-1 sm:order-1 grid items-center justify-center">
-		<img src="https://onedrive.live.com/embed?resid=A72586530CE9245A%21222&authkey=%21AM5zbrGSSvU0a1w&width=3195&height=3035" class="hero-image max-w-[600px] sm:w-auto w-full md:bg-white bg-[url('/assets/backgrounds/bg-profile-1.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')]  dark:sm:bg-[#665fcc] bg-cover bg-center bg-no-repeat" alt="jljulioa">
+		<img src="/assets/jljulioa-drive.png" class="hero-image max-w-[600px] sm:w-auto w-full bg-[url('/assets/backgrounds/bg-profile-1.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-cover bg-center bg-no-repeat" alt="jljulioa">
 	</div>
 	<h1 class="grid p-4 sm:justify-end text-center text-3xl sm:text-4xl md:text-5xl font-bold -order-1 sm:order-1">@Jaime Julio A.</h1>
 </main>
