--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -1,16 +1,16 @@
 ---
 import Section from "../layouts/Section.astro";
 import Title from '../layouts/Titles.astro'
-
+import Paragraph from "../layouts/Paragraph.astro";
 ---
 
-<Section class="flex flex-col pt-20" id="education">
+<Section id="education">
   <Title>Formal Education</Title>
-  <p class="pb-8 pt-20 text-xl md:text-2xl text-center">
+  <Paragraph >
     I have been fortunate enough to receive praise for my work in several
     publications. Take a look below to learn more.
-  </p>
-  <div class="flex flex-col justify-center items-center">
+  </Paragraph>
+  <div class="flex flex-col text-left justify-center items-center pl-4">
     <ol
       class="flex flex-col relative border-s border-gray-200 dark:border-gray-700 justify-center"
     >
@@ -22,7 +22,7 @@ import Title from '../layouts/Titles.astro'
             class="relative grid place-content-center rounded-full bg-gray-800 dark:bg-white h-5 w-5"
           ></span>
         </div>
-        <h3 class="flex items-center mb-1 text-lg font-semibold">
+        <h3 class="mb-1 text-lg font-semibold">
           Project Admin (MBA)<span
             class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
             >August 2023</span
@@ -41,7 +41,7 @@ import Title from '../layouts/Titles.astro'
             class="relative grid place-content-center rounded-full bg-gray-800 dark:bg-white h-5 w-5"
           ></span>
         </div>
-        <h3 class="flex items-center mb-1 text-lg font-semibold">
+        <h3 class="mb-1 text-lg font-semibold">
          Asset Management ISO 55000 (Diploma) <span
             class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
             >2019</span
@@ -62,7 +62,7 @@ import Title from '../layouts/Titles.astro'
             class="relative grid place-content-center rounded-full bg-gray-800 dark:bg-white h-5 w-5"
           ></span>
         </div>
-        <h3 class="flex items-center mb-1 text-lg font-semibold">
+        <h3 class="mb-1 text-lg font-semibold">
          English Level C1 <span
             class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
             >2018</span
@@ -83,7 +83,7 @@ import Title from '../layouts/Titles.astro'
             class="relative grid place-content-center rounded-full bg-gray-800 dark:bg-white h-5 w-5"
           ></span>
         </div>
-        <h3 class="flex items-center mb-1 text-lg font-semibold">
+        <h3 class="mb-1 text-lg font-semibold">
          Mechanical Engineer <span
             class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
             >2015</span
@@ -99,10 +99,10 @@ import Title from '../layouts/Titles.astro'
     </ol>
   </div>
   <Title class="pt-20">Self Education</Title>
-  <p class="pb-8 pt-20 text-xl md:text-2xl text-center">
+  <Paragraph>
    In this sections I show what key materials I am used to lern so far, not certificated model education.
-  </p>
-  <div class="flex flex-col justify-center items-center">
+  </Paragraph>
+  <div class="flex flex-col text-left justify-center items-center pl-4">
     <ol
       class="flex flex-col relative border-s border-gray-200 dark:border-gray-700 justify-center"
     >
@@ -114,7 +114,7 @@ import Title from '../layouts/Titles.astro'
             class="relative grid place-content-center rounded-full bg-gray-800 dark:bg-white h-5 w-5"
           ></span>
         </div>
-        <h3 class="flex items-center mb-1 text-lg font-semibold">
+        <h3 class="mb-1 text-lg font-semibold">
           AWS Certified Solutions Architect Associate SAA-C03
           <span 
             class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
@@ -134,7 +134,7 @@ import Title from '../layouts/Titles.astro'
             class="relative grid place-content-center rounded-full bg-gray-800 dark:bg-white h-5 w-5"
           ></span>
         </div>
-        <h3 class="flex items-center mb-1 text-lg font-semibold">
+        <h3 class="mb-1 text-lg font-semibold">
           AWS EKS Kubernetes-Masterclass | DevOps Microservices
           <span 
             class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
@@ -154,7 +154,7 @@ import Title from '../layouts/Titles.astro'
             class="relative grid place-content-center rounded-full bg-gray-800 dark:bg-white h-5 w-5"
           ></span>
         </div>
-        <h3 class="flex items-center mb-1 text-lg font-semibold">
+        <h3 class="mb-1 text-lg font-semibold">
           AWS EKS Kubernetes-Masterclass | DevOps Microservices
           <span 
             class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
