--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,21 +2,59 @@
 
 ---
 
-<main class="grid sm:grid-cols-3 relative mt-20 sm:mt-40 max-w-7xl w-full mx-auto sm:mb-28 px-2 sm:rounded-3xl text-white dark:text-slate-900 " id="hero">
-	<h1 class="grid p-4 sm:items-end text-center text-2xl sm:text-xl md:text-2xl font-semibold">AWS DevOps Jr. and Mechanical Engineer with MBA (Project Admin)</h1>
-	<div class="-order-1 sm:order-1 grid items-center justify-center">
-		<img src="/assets/jljulioa-drive.png" class="hero-image max-w-[600px] sm:w-auto w-full bg-[url('/assets/backgrounds/bg-profile-1.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-cover bg-center bg-no-repeat" alt="jljulioa">
-	</div>
-	<h1 class="grid p-4 sm:justify-end text-center text-3xl sm:text-4xl md:text-5xl font-bold -order-1 sm:order-1">@Jaime Julio A.</h1>
+<main
+  class="relative my-20 sm:mt-40 sm:pb-20 max-w-6xl w-full mx-auto sm:mb-28 sm:rounded-3xl text-white sm:text-[#001220] dark:text-slate-900 dark:sm:text-white"
+  id="hero"
+>
+  <div
+    class="-order-1 relative sm:order-1 grid items-center justify-center mx-4"
+  >
+    <img
+      src="/assets/jljulioa-drive.png"
+      class="hero-image max-w-[600px] sm:w-auto w-full bg-[url('/assets/backgrounds/bg-profile-1.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-cover bg-center bg-no-repeat"
+      alt="jljulioa"
+    />
+    <h1
+      class="inline sm:absolute text-center my-8 sm:right-12 sm:top-12 sm:z-10 bg-clip-padding sm:p-2.5 dark:sm:bg-gray-800 sm:bg-white rounded-2xl sm:my-auto text-6xl md:text-5xl font-bold"
+    >
+      @Jaime <br class="sm:hidden" /> Julio A.
+    </h1>
+    <div
+      class="sm:absolute sm:bottom-0 sm:left-12 sm:z-10 sm:flex sm:flex-col sm:justify-end text-2xl sm:text-xl md:text-2xl font-semibold text-center sm:text-wrap"
+    >
+      <h1
+        class="inline sm:ml-auto sm:bg-clip-padding sm:p-2.5 sm:bg-white dark:sm:bg-gray-800 sm:rounded-2xl sm:my-4"
+      >
+        AWS DevOps Jr. and
+      </h1>
+      <h1
+        class="inline sm:ml-auto sm:bg-clip-padding sm:p-2.5 sm:bg-white dark:sm:bg-gray-800 sm:rounded-2xl sm:mb-4"
+      >
+        Mechanical Engineer with
+      </h1>
+      <h1
+        class="inline sm:ml-auto sm:bg-clip-padding sm:p-2.5 sm:bg-white dark:sm:bg-gray-800 sm:rounded-2xl sm:mb-4"
+      >
+        MBA (Project Admin)
+      </h1>
+    </div>
+  </div>
+  <img
+    src="/assets/backgrounds/bg-div-up.svg"
+    class="w-full sm:hidden dark:hidden"
+    alt=""
+  />
+  <img
+    src="/assets/backgrounds/bg-div-up-dark.svg"
+    class="w-full hidden dark:block dark:sm:hidden"
+    alt=""
+  />
 </main>
-<img src="/assets/backgrounds/bg-div-up.svg" class="w-full sm:hidden dark:hidden pb-20" alt="">
-<img src="/assets/backgrounds/bg-div-up-dark.svg" class="w-full hidden dark:block dark:sm:hidden pb-20" alt="">
-
 
 <style>
-	.hero-image {
-		-webkit-mask-image: url(/assets/frame.svg);
-		-webkit-mask-size: contain;
-		-webkit-mask-repeat: no-repeat;
-	}
+  .hero-image {
+    -webkit-mask-image: url(/assets/frame.svg);
+    -webkit-mask-size: contain;
+    -webkit-mask-repeat: no-repeat;
+  }
 </style>
