--- a/src/components/Recomendation.astro
+++ b/src/components/Recomendation.astro
@@ -3,8 +3,8 @@ import Section from "../layouts/Section.astro";
 import Title from "../layouts/Titles.astro";
 ---
 
-<Section class="grid justify-center items-center pt-20 pb-20" id="reco">
-  <Title class="">Recomendation</Title>
+<Section id="reco">
+  <Title >Recomendation</Title>
   <div class="pt-20">
     <div
       class="w-full max-w-64 mx-auto px-3 py-4 text-gray-800 bg-white rounded-lg shadow-lg dark:bg-gray-800 dark:text-gray-50"
