--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,37 +1,73 @@
 ---
+import WhatsAppIcon from "./icons/WhatsApp-ico.astro";
+import GmailIcon from "./icons/Gmail-ico.astro";
+import GitHubIcon from "./icons/GitHubLogo-icon.astro";
+import LinkeindIcon from "./icons/Linkeind-icon.astro";
+import CopyIcon from "./icons/Copy-icon.astro";
+
+const iconLinks: { label: string; href: string; icon: any }[] = [
+  { label: "Lambda", href: "https://github.com/jljulioa", icon: GitHubIcon },
+  {
+    label: "API Gateway",
+    href: "https://wa.me/+573008865675",
+    icon: WhatsAppIcon,
+  },
+  {
+    label: "AWS - S3",
+    href: "https://www.linkedin.com/in/jljulioa1408/",
+    icon: LinkeindIcon,
+  },
+  { label: "CloudFront", href: "mailto:jljulioa@gmail.com", icon: GmailIcon },
+  { label: "DynamoDB", href: "mailto:jljulioa@gmail.com", icon: GmailIcon },
+  { label: "Serverless Framework", href: "mailto:jljulioa@gmail.com", icon: GmailIcon },
+  { label: "Github Actions", href: "mailto:jljulioa@gmail.com", icon: GmailIcon },
+
+];
+
 import Title from "../layouts/Titles.astro";
 import Section from "../layouts/Section.astro";
 import AppSlides from "./AppSlides";
+import Paragraph from "../layouts/Paragraph.astro";
 ---
 
-<Section class="pt-20">
+<Section>
   <Title>AI Wallpapers</Title>
-  <p class="pb-8 pt-20 text-xl md:text-2xl text-center">
-    This is Another project about a Gallery App of Wallpapers created by @me using AI Web like
-     <a
+  <Paragraph>
+    This is Another project about a Gallery App of Wallpapers created by @me
+    using AI Web like
+    <a
       href="https://www.catbird.ai/"
-      class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold">CatBird.ai</a
+      class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold"
+      >CatBird.ai</a
     > and <a
       href="https://tensor.art/"
-      class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold">TensorArt</a
+      class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold"
+      >TensorArt</a
     >. Some other Wallpapers where taken from <a
-    href="https://wallhaven.cc/"
-    class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold">Wallhaven</a
-  >. This App was created using as a Backend AWS Services:
-  </p>
-  <div class="flex justify-center">
-    <ul class="list-disc text-xl md:text-2xl">
-      <li>Lambda</li>
-      <li>API Gateway</li>
-      <li>S3</li>
-      <li>CloudFront</li>
-      <li>DynamoDB</li>
-      <li>Serverless Framework</li>
-      <li>Github Actions</li>
-    </ul>
+      href="https://wallhaven.cc/"
+      class="text-xl md:text-2xl text-blue-500 dark:text-[#665fcc] font-semibold"
+      >Wallhaven</a
+    >. This App was created using as a Backend AWS Services:
+  </Paragraph>
+  <div class="w-auto inline-block">
+    {
+      iconLinks.map((sticks) => (
+          <div
+            id={sticks.label}
+            class="inline-block justify-center items-center rounded-lg px-2 mx-2 my-2 ring-4 ring-blue-700 hover:ring-[#665fcc] dark:hover:ring-blue-700 dark:ring-[#665fcc] bg-white border border-gray-200 shadow dark:bg-gray-800 dark:border-gray-700"
+          ><div class="flex flex-row items-center">
+            <sticks.icon class="sm:size-6 size-5 py-1" />
+            <span class="px-2 text-blue-600 dark:text-[#665fcc]">{sticks.label}</span>  
+          </div>
+          </div>
+      ))
+    }
   </div>
   <AppSlides client:load />
-  <p class="pb-8 pt-8 text-xl md:text-2xl text-center">If you want to upload a file to S3 and see the full gallery click below</p>
+  <Paragraph>
+    Watch the full Wall-AI gallery and upload your own Wallpapers to S3
+    (temperary). Click below
+  </Paragraph>
   <a class="flex justify-center" href="/upload/">
     <button
       data-tooltip-target="tooltip-animation-gallery"
@@ -41,7 +77,7 @@ import AppSlides from "./AppSlides";
       Gallery Wallpapers
     </button>
   </a>
-  
+
   <div
     id="tooltip-animation-gallery"
     role="tooltip"
